# pspd_unb

./: README.md
Lab01/: README.md
Lab01/doisServidoresRPC/: doisServidoresRPC.x  makefile
Lab01/doisServidoresRPC/inc/: properties.h
Lab01/doisServidoresRPC/src/: client.c  server_1.c  server_2.c
Lab01/servidorRPC/: makefile
Lab01/servidorRPC/inc/: properties.h
Lab01/servidorRPC/src/: client.c  server.c
Lab02/: README.md
Lab02/multiServidores/: makefile
Lab02/multiServidores/inc/: properties.h
Lab02/multiServidores/src/: client.c  server.c
Lab02/umServidor/: makefile
Lab02/umServidor/inc/: properties.h
Lab02/umServidor/src/: client.c  server.c
Lab03/: CMakeLists.txt  README.md  makefile
Lab03/inc/: properties.h
Lab03/src/: CMakeLists.txt  amqp_wrapper.c  client.c  consumer.c  producer.c  server.c  utils.h
Lab04/: README.md  kafka-word-count.py  main.py  word-count.py
